--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="16x16" type="image/png" />
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="32x32" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Vincent Company" />
+    <meta property="og:description" content="Web site created using create-react-app" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="https://bostonbachexchange.github.io/front-end-vincent/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +32,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <base href="/" />
+
+    <title>Vincent Company</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
